manifests/dynatrace/dynatrace-oneagent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dynatrace-oneagent
spec:
  selector:
    matchLabels:
      name: dynatrace-oneagent
  template:
    metadata:
      labels:
        name: dynatrace-oneagent
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      nodeSelector:
        beta.kubernetes.io/os: linux
      volumes:
        - name: host-root
          hostPath:
            path: /
      containers:
        - name: dynatrace-oneagent
          image: dynatrace/oneagent
          args:
            - '--set-network-zone=uk.fhnh.aws'
          volumeMounts:
            - name: host-root
              mountPath: /mnt/root
          securityContext:
            privileged: true
